--- a/HTML-CSS/Login-pages/index.html
+++ b/HTML-CSS/Login-pages/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Page Title</title>
-    <link rel="stylesheet" href="styles.css" />
-</head>
+    <title>Login Page</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"></head>
 <body>
 
     <main>
         <div class="sign-up-box">
             <div class="sign-up-info">
-                <h1>Get Stared Now</h1>
+                <h1>Get Started Now</h1>
                 <form>
                     <div class="sign-up-input">
                         <label for="name">Name</label>
@@ -25,7 +27,7 @@
 
                     <div class="sign-up-input">
                         <label for="password">Password</label>
-                        <input type="text" id="password" placeholder="Enter your password"></input>
+                        <input type="password" id="password" placeholder="Enter your password"></input>
                     </div>
 
                     <div class="sign-up-term">
@@ -50,9 +52,9 @@
                 </form>
             </div>
         </div>
+
         <div class="sign-up-image-box">
             <img src="https://plus.unsplash.com/premium_photo-1682050733502-f58b7f499490?q=80&w=776&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Leaf"></img>
-
         </div>
     </main>
 </body>
