refactor(1.login page): update login page layout and styles, replace images with SVG icons

--- a/HTML-CSS/1-login-page/index.html
+++ b/HTML-CSS/1-login-page/index.html
@@ -33,19 +33,19 @@
                     <div class="sign-up-term">
                         <input type="checkbox" class="sign-up-term-checkbox"></input>
                         <span class="sign-up-term-text">I agree to the
-                            <a href="#">terms & policy</a>
+                            <a class="link-term" href="#">terms & policy</a>
                         </span>
                     </div>
 
                     <button type="submit">Signup</button>
 
                     <div class="divider">
-                        <p>Or</p>
+                        <p class="divider-text">Or</p>
                     </div>
 
                     <div class="sign-in-social">
-                        <a href="#" class="google-login">Sign in with Google</a>
-                        <a href="#" class="apple-login">Sign in with Apple</a>
+                        <a href="#" class="google-login"><img src="/icons/google-logo.svg" alt="Leaf"> in with Google</a>
+                        <a href="#" class="apple-login"><img src="/icons/apple-logo.svg" alt="Leaf">Sign in with Apple</a>
                     </div>
 
                     <p class="have-account">Have an account? <a href="#">Sign In</a></p>
@@ -54,7 +54,7 @@
         </div>
 
         <div class="sign-up-image-box">
-            <img src="https://plus.unsplash.com/premium_photo-1682050733502-f58b7f499490?q=80&w=776&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Leaf"></img>
+            <img class="leaf-img" src="/icons/plant.svg" alt="Leaf">
         </div>
     </main>
 </body>
